--- a/index.html
+++ b/index.html
@@ -428,6 +428,6 @@
 
 <!-- Javascript -->
 <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-<script src="app.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
