--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <meta name="msapplication-TileColor" content="#603cba">
     <meta name="theme-color" content="#ffffff">
         
-    <meta name="description" content="Описание страницы">
-    <meta name="Keywords" content="создание сайтов верстка сайтов"/>
+    <meta name="description" content="description">
+    <meta name="Keywords" content="hot keys"/>
     <meta name="google" content="notranslate" />
     <title>ActiveBox</title>
 
@@ -330,7 +330,7 @@
     <div class="container">
         
         <div class="reviews__slider" id="reviewsSlider">
-            <div class="slick__item"> <!-- чтобы перебить стили слайдера (выдает блок) -->
+            <div class="slick__item"> 
                 <div class="reviews__item">
                     <div class="reviews__photo">
                         <img class="reviews__image" src="img/reviews/review-1.jpg" alt="">
