--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                         <img class="reviews__image" src="img/reviews/review-1.jpg" alt="">
                     </div>
                     <div class="reviews__content">
-                        <div class="reviews__text">“lipsumasda da sda asda sdasdasd asd“</div>
+                        <div class="reviews__text">“Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut.“</div>
                         <div class="reviews__author">Susan Sims, Interaction Designer at XYZ</div>
                     </div>
                 </div> 
